Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58930

qmlplugindump generates error

XMLWordPrintable

      When generating qmltypes files for the qtconnectivity and qtsensors repos qmlplugindump generates an unusual error message which might indicate severe errors:

      ~/dev/qt/qt59/qtsensors/src/imports/sensors/qmlplugindump_wrapper.sh nonrelocatable QtSensors 5.9 > ~/dev/qt/qt59/qtsensors/src/imports/sensors/plugins.qmltypes
      Error parsing dependencies file <outputOfQmlimportscanner>:illegal value at 0 failed to proecess output of qmlimportscanner
      
      make qmltypes 
      ~/dev/qt/qt59/qtconnectivity/src/imports/bluetooth/qmlplugindump_wrapper.sh -nonrelocatable QtBluetooth 5.9 > ~/dev/qt/qt59/qtconnectivity/src/imports/bluetooth/plugins.qmltypes
      Error parsing dependencies file <outputOfQmlimportscanner>:illegal value at 0 failed to proecess output of qmlimportscanner
      

      Despite the error a file update is generated but the produced output doesn't seem to be accurate either:

      https://codereview.qt-project.org/#/c/185752/1/src/imports/bluetooth/plugins.qmltypes

      The QtQuick reference is removed and QAbstractItemModel should not be added.

      This was done with a brand new checkout of the 5.9 branch on Linux.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mabenell Marco Benelli
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes